# classtools

./: README.md
.github/workflows/: cmake-multi-platform.yml
ITClassHelper/: mainwindow.cpp  mainwindow.h  mainwindow.ui
ITClassHelper/full/: CMakeLists.txt  mainwindow.ui
ITClassHelper/single/hosteditor/: CMakeLists.txt  README.md  main.cpp
rand/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  rand.qrc  settingdlg.cpp  settingdlg.h  settingdlg.ui  settings_dlg.cpp  settings_dlg.h
rand-full/: CMakeLists.txt
rand-simple/: CMakeLists.txt  main.cpp
